include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gucharmap
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 

DOC_LINGUAS =

# These should be converted to use gnome-doc-utils
# http://live.gnome.org/GnomeDocUtilsTranslationMigration
# Please remember also to remove help/langcode/Makefile from toplevel
# Makefile.am's AC_CONFIG_FILES
SUBDIRS = de es fr it ja ko sv zh_CN zh_TW
