include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gucharmap
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 

DOC_LINGUAS = bg ca de el en_GB es fi fr ko oc pt_BR ru sv vi

# These should be converted to use gnome-doc-utils
# http://live.gnome.org/GnomeDocUtilsTranslationMigration
# Please remember also to remove help/langcode/Makefile from toplevel
# configure.ac's AC_CONFIG_FILES, and remove your directory from
# the SUBDIRS below.
SUBDIRS = it ja zh_CN zh_TW
